# ortholang

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  2018-05-29_shortcut-arg-files.md  CHANGELOG.md  DEVELOPMENT.md  Detourrr.cabal  Detourrr.hs  Docs.hs  Main.hs  MainSpec.hs  OrthoLang.cabal  OrthoLang.hs  README.md  Reference.hs  ShortCut.cabal  ShortCut.hs  ShortCutSpec.hs  TODO.txt  Test.hs  Tests.hs  UnicodeTest.hs  WriteRunDot.hs  better-completions.hs  bugs.txt  build.sh  configurator-test.cfg  configurator-test.hs  default.cfg  default.nix  demo.sh  dependencies.nix  detourrr.nix  docker.nix  environment.nix  graphvis-test.hs  greencut.sh  greencut_htc2.sh  haskell-generated.nix  (+38 more)
shortcut/: ShortCut.cabal  default.nix  shell.nix  stack.yaml  test.sh
shortcut/src/: Main.hs
shortcut/src/ShortCut/: Compile.hs  Interpret.hs  Repl.hs  TypeCheck.hs  Types.hs
shortcut/test/: MainSpec.hs
shortcut/test/ShortCut/: EvalSpec.hs  MonadsSpec.hs  ReplSpec.hs
src/: Paths_ShortCut.hs  ShortCut.cabal  ShortCut.hs  mockup.hs  shortcut-slurm.sh  shortcut-srun.sh  shortcut.nix  stack.yaml  usage.txt
src/ShortCut/: Core.hs  Interpret.hs  Modules.hs  Monads.hs  Parse.hs  Test.hs  Types.hs
src/ShortCut/Core/: Actions.hs  Cluster.hs  Cmd.hs  Compile.hs  Config.hs  Debug.hs  Eval.hs  Locks.hs  ModuleAPI.hs  Parse.hs  Paths.hs  Paths2.hs  Paths3.hs  Pretty.hs  Repeat.hs  Repl.hs  Rules.hs  Slurm.hs  Types.hs  Util.hs
src/ShortCut/Modules/: BioMartR.hs  Blast.hs  BlastCRB.hs  BlastDB.hs  BlastHits.hs  BlastRBH.hs  Glob.hs  Hmmer.hs  Length.hs  Load.hs  LoadList.hs  Math.hs  Muscle.hs  Permute.hs  Plots.hs  PsiBlast.hs  Repeat.hs  Sample.hs  Scores.hs  SeqIO.hs  Sets.hs  Summarize.hs  Tables.hs
src/ShortCut/Test/: Deps.hs  Eval.hs  Parse.hs  Repl.hs  Scripts.hs
src/data/: SynPCC7492_chr.gbk  SynPCC7492_pANL.gbk  SynPCC7942_pANL.gbk  mini-genelists-faa.txt  mini-genelists-fna.txt
src/tests/biomartr/: get_genomes.out  get_genomes.tree  get_proteomes.cut  parse_searches.tree
src/tests/blast/: blast-basic-blastp.cut  blast-basic-blastp.tree  blast-basic-blastx.cut  blast-basic-blastx.tree  blast-basic-tblastn.cut  blast-basic-tblastn.tree  blast-basic-tblastx.cut  blast-basic-tblastx.tree  blast-deduplication.result  blast-each.result  blast-each.tree  blast-from-db.cut  blast-from-db.result  blast-from-db.tree  blast-reverse.cut  blast_db.cut  blast_db.out  blast_db.tree  blast_db_each.cut  blast_db_each.out  blast_db_each.tree  blast_rev.cut  blast_rev.tree  blast_rev_each.tree  blastn.cut  blastn.tree  blastn_db.cut  blastn_db.tree  blastp.cut  blastp.tree  blastp_db.cut  blastp_db.tree  blastx.result  blastx.tree  blastx_db.cut  blastx_db.tree  megablast.tree  tblastn.tree  tblastn_db.cut  tblastn_db.tree  (+2 more)
src/tests/blastcrb/: crb_blast_each.tree  crb_blast_each2.tree  crb_blast_many-cyanos.out  crb_blast_many-cyanos.tree  crb_blast_two-cyanos.cut  crb_blast_two-cyanos.out  crb_blast_two-cyanos.result  crb_blast_two-cyanos.tree
src/tests/blastdb/: blastdb-blastdblist.result  blastdb-blastdblist.tree  blastdb-makeblastdb.cut  blastdb-makeblastdb.result  blastdb-makeblastdb.tree  blastdblist.out  blastdblist.tree  makeblastdb.cut  makeblastdb.tree  makeblastdb_nucl.cut  makeblastdb_nucl.tree  makeblastdb_nucl_all.out  makeblastdb_nucl_each.out  makeblastdb_nucl_each.tree  makeblastdb_prot.cut  makeblastdb_prot.tree  makeblastdb_prot_all.out  makeblastdb_prot_each.out  makeblastdb_prot_each.tree  parse_search.out  parse_search.tree  singletons.tree
src/tests/blasthits/: best_hits.cut  best_hits.tree  extract_queries.tree  extract_targets.tree  filter_evalue.cut  filter_evalue.out  filter_evalue.tree
src/tests/blastrbh/: blast_rev_each.tree  blastn_rbh.tree  blastn_rev.cut  blastn_rev.out  blastn_rev.tree  blastp_rbh.tree  blastp_rev.cut  blastp_rev.tree  reciprocal_best.cut  reciprocal_best.out  reciprocal_best.tree  tblastn_rbh.tree
src/tests/bugfix/: bugfix-blast-duplication.cut  bugfix-blast-duplication.tree
src/tests/crb/: crb-dedup.cut  crb-dedup.result  crb-many-cyanos.cut  crb-many-cyanos.result  crb-many-cyanos.tree  crb-two-cyanos.cut  crb-two-cyanos.tree
src/tests/debug/: debug.cut
src/tests/dedup/: dedup-crb.tree  dedup-list.cut  dedup-lit-lists.tree  dedup-map-single.cut
src/tests/demo/: demo_basics.cut
src/tests/dependencies/: biomartr.txt  ncbi_blast.txt  r.txt
src/tests/fasta/: fasta-extract-ids.result  fasta-extract-ids.tree  fasta-extract-seqs.tree
src/tests/gbk/: gbk-to-faa.result  gbk-to-faa.tree  gbk-to-fna-concat.abs  gbk-to-fna-concat.cut  gbk-to-fna-concat.generic  gbk-to-fna-concat.tree  gbk-to-fna.cut  gbk-to-fna.generic  gbk-to-fna.result  gbk-to-fna.tree
src/tests/glob/: glob_files.cut  glob_files.tree  load_globs.cut
src/tests/hash/: hash-map-elems.cut  hash-map-elems.tree
src/tests/hmmer/: hmmbuild.tree  hmmsearch.cut  hmmsearch.tree
src/tests/length/: length-each-empties.cut  length-each-empties.tree  length-empties.cut  length-empty.tree  length-sets.cut  length-sets.tree  length_compiled.cut  length_compiled.tree  length_each_empties.cut  length_each_empties.tree  length_empty.tree  length_sets.cut  length_sets.tree
src/tests/lists/: list4.tree  list5.tree  list_empty.tree  list_empty2.cut  list_empty2.tree  list_empty3.tree  list_exprs.tree  list_lists.tree  list_map_rules.cut  list_one.tree  list_one2.tree
src/tests/load/: glob_files.out  glob_files.tree  load_faa.tree  load_fna.cut  load_globs.cut  load_globs.tree  load_list.cut
src/tests/map/: map-dedup-list-of-strs.result  map-dedup-single.cut  map-dedup-single.tree
src/tests/math/: add.tree  divide.cut  divide.tree  math-add.tree  math-divide.tree  math-multiply.tree  math-subtract.tree  multiply.tree  subtract.tree
src/tests/muscle/: muscle.tree
src/tests/permute/: leave_each_out.out  leave_each_out.result  leave_each_out.tree  leave_each_out2.tree  permute-lists.abs  permute-lists.generic  permute-lists.result  permute-lists.tree  permute-nums.abs  permute-nums.generic  permute-nums.result  permute-nums.tree
src/tests/plots/: histogram.out  (+12 more)
(+4157 files in other folders)
