name:               Detourrr
synopsis:           Rapid, robust, reproducible candidate gene searches
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.8.1.0
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
data-files:         data/*.fa,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbff,
                    data/*.gbk,
                    data/*.txt,
                    -- tests/biomartr/*.rrr,
                    tests/biomartr/*.out,
                    tests/biomartr/*.tree,
                    -- tests/blast/*.rrr,
                    tests/blast/*.out,
                    tests/blast/*.tree,
                    -- tests/crb_blast/*.rrr,
                    tests/crb_blast/*.out,
                    -- tests/blastdb/*.rrr,
                    tests/blastdb/*.out,
                    tests/blastdb/*.tree,
                    -- tests/blasthits/*.rrr,
                    tests/blasthits/*.out,
                    -- tests/blastrbh/*.rrr,
                    tests/blastrbh/*.out,
                    tests/dependencies/*.txt,
                    -- tests/diamond/*.rrr,
                    tests/diamond/*.out,
                    tests/diamond/*.tree,
                    -- tests/hmmer/*.rrr,
                    tests/hmmer/*.out,
                    tests/hmmer/*.tree,
                    -- tests/length/*.rrr,
                    tests/length/*.out,
                    tests/length/*.tree,
                    -- tests/lists/*.rrr,
                    tests/lists/*.out,
                    tests/lists/*.tree,
                    -- tests/load/*.rrr,
                    tests/load/*.out,
                    tests/load/*.tree,
                    -- tests/math/*.rrr,
                    tests/math/*.out,
                    tests/math/*.tree,
                    -- tests/mmseqs/*.rrr,
                    tests/mmseqs/*.out,
                    -- tests/mmseqs/*.tree,
                    -- tests/muscle/*.rrr,
                    tests/muscle/*.out,
                    tests/muscle/*.tree,
                    -- tests/orthofinder/*.rrr,
                    tests/orthofinder/*.out,
                    tests/orthofinder/*.tree,
                    -- tests/permute/*.rrr,
                    tests/permute/*.out,
                    tests/permute/*.tree,
                    -- tests/plots/*.rrr,
                    tests/plots/*.out,
                    -- tests/psiblast/*.rrr,
                    tests/psiblast/*.out,
                    tests/psiblast/*.tree,
                    -- tests/repeat/*.rrr,
                    tests/repeat/*.out,
                    tests/repeat/*.tree,
                    tests/repl/*.tree,
                    tests/repl/*.txt,
                    -- tests/seqio/*.rrr,
                    tests/seqio/*.out,
                    tests/seqio/*.tree,
                    -- tests/sets/*.rrr,
                    tests/sets/*.out,
                    tests/sets/*.tree,
                    -- tests/summarize/*.rrr,
                    -- tests/summarize/*.out,
                    -- tests/summarize/*.tree,
                    -- tests/vars/*.rrr,
                    tests/vars/*.out,
                    tests/vars/*.tree,
                    usage.txt,
                    wrappers/*.sh

-- everything is built into one binary:
--   run tests with detourrr --test
--   write reference.md with detourrr --reference
executable detourrr
  main-is:          Detourrr.hs
  ghc-options: 
        -threaded
        -rtsopts
        -Wall
        -- -Werror
        -Wno-orphans
        -O2
        "-with-rtsopts=-N -IO"
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_Detourrr,
                    Detourrr.Core,
                    Detourrr.Core.Actions,
                    Detourrr.Core.Compile,
                    Detourrr.Core.Compile.Basic,
                    Detourrr.Core.Compile.Compose,
                    Detourrr.Core.Compile.Map,
                    Detourrr.Core.Compile.Map2,
                    Detourrr.Core.Compile.Repeat,
                    Detourrr.Core.Config,
                    Detourrr.Core.Eval,
                    Detourrr.Core.Locks,
                    Detourrr.Core.Parse,
                    Detourrr.Core.Parse.Basic,
                    Detourrr.Core.Parse.Expr,
                    Detourrr.Core.Parse.Script,
                    Detourrr.Core.Paths,
                    Detourrr.Core.Pretty,
                    Detourrr.Core.Repl,
                    Detourrr.Core.Sanitize,
                    Detourrr.Core.Types,
                    Detourrr.Core.Util,
                    Detourrr.Modules,
                    Detourrr.Modules.BioMartR,
                    Detourrr.Modules.Blast,
                    Detourrr.Modules.BlastDB,
                    Detourrr.Modules.BlastHits,
                    Detourrr.Modules.BlastRBH,
                    Detourrr.Modules.Cheat,
                    Detourrr.Modules.CRBBlast,
                    Detourrr.Modules.Diamond,
                    Detourrr.Modules.Hmmer,
                    Detourrr.Modules.Length,
                    Detourrr.Modules.Load,
                    Detourrr.Modules.MMSeqs,
                    Detourrr.Modules.Math,
                    Detourrr.Modules.Muscle,
                    Detourrr.Modules.OrthoFinder,
                    Detourrr.Modules.OrthoGroups,
                    Detourrr.Modules.Permute,
                    Detourrr.Modules.Plots,
                    Detourrr.Modules.PsiBlast,
                    Detourrr.Modules.Repeat,
                    Detourrr.Modules.Sample,
                    Detourrr.Modules.Scores,
                    Detourrr.Modules.SeqIO,
                    Detourrr.Modules.Sets,
                    Detourrr.Modules.SonicParanoid,
                    Detourrr.Modules.Summarize,
                    Detourrr.Reference,
                    Detourrr.Test,
                    Detourrr.Test.Deps
                    Detourrr.Test.Parse,
                    Detourrr.Test.Parse.Arbitrary,
                    Detourrr.Test.Parse.Examples,
                    Detourrr.Test.Repl,
                    Detourrr.Test.Scripts
  build-depends:    Command,
                    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    docopt,
                    exceptions,
                    enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filelock,
                    filepath,
                    haskeline,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    regex-compat,
                    silently,
                    scientific,
                    shake,
                    split,
                    strict,
                    -- tagged-exception-core,
                    hspec,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unbounded-delays,
                    unix,
                    utility-ht,
                    time,
                    concurrent-extra,
                    retry,
                    terminal-size,
                    posix-escape,
                    random,
                    random-shuffle,
                    dlist,
                    ansi-terminal
