cabal-version:      2.2
name:               OrthoLang
synopsis:           Short, reproducible phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.9.4
-- license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
data-files:         examples/scripts/*.ol,
                    examples/gene-lists/*.txt,
                    examples/genome-lists/*.txt,
                    examples/sequences/*.fa,
                    examples/sequences/*.faa,
                    examples/sequences/*.fna,
                    examples/sequences/*.gbff,
                    examples/sequences/*.gbk,
                    docs/*.txt,
                    docs/modules/*.txt,
                    docs/types/*.txt,
                    docs/functions/*.txt,
                    tests/check/*.sh,
                    tests/versions/*.txt,
                    tests/repl/*.txt,
                    tests/scripts/*.ol,
                    tests/stdout/*.txt,
                    tests/tmpfiles/*.txt,
                    tests/parse/*.txt,
                    scripts/wrappers/*.sh

source-repository head
  type: git
  location: https://github.com/jefdaj/ortholang.git

common shared-properties
  hs-source-dirs:   .
  default-language: Haskell2010
  pkgconfig-depends: zlib
  build-depends:    Glob,
                    -- TODO is this ok to bring back? MissingH,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    deepseq,
                    docopt,
                    -- exceptions,
                    -- enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filelock,
                    filepath,
                    haskeline,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    -- regex,
                    regex-compat,
                    regex-posix,
                    -- regex-pcre,
                    silently,
                    scientific,
                    shake >= 0.17.5,
                    split,
                    strict,
                    -- tagged-exception-core,
                    hspec,
                    pretty-simple,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unbounded-delays,
                    unordered-containers,
                    unix,
                    utility-ht,
                    time,
                    concurrent-extra,
                    retry,
                    terminal-size,
                    posix-escape,
                    random,
                    random-shuffle,
                    dlist,
                    ansi-terminal,
                    setlocale,
                    raw-strings-qq,
                    logging,
                    progress-meter,
                    store,
                    download

library
  import:           shared-properties
  exposed-modules:  Paths_OrthoLang,
                    OrthoLang.Core,
                    OrthoLang.Core.Actions,
                    OrthoLang.Core.Expand,
                    OrthoLang.Core.Compile,
                    OrthoLang.Core.Compile.Basic,
                    OrthoLang.Core.Compile.Compose,
                    OrthoLang.Core.Compile.Map,
                    OrthoLang.Core.Compile.Map2,
                    OrthoLang.Core.Compile.NewRules,
                    OrthoLang.Core.Compile.Simple,
                    OrthoLang.Core.Config,
                    OrthoLang.Core.Eval,
                    OrthoLang.Locks,
                    OrthoLang.Core.Parse,
                    OrthoLang.Core.Parse.Basic,
                    OrthoLang.Core.Parse.Expr,
                    OrthoLang.Core.Parse.Script,
                    OrthoLang.Core.Parse.Util,
                    OrthoLang.Core.Paths,
                    OrthoLang.Core.Pretty,
                    OrthoLang.Core.Repl,
                    OrthoLang.Core.Sanitize,
                    OrthoLang.Core.Types,
                    OrthoLang.Debug,
                    OrthoLang.Errors,
                    OrthoLang.Util,
                    OrthoLang.Modules,
                    OrthoLang.Modules.AllVsAll,
                    OrthoLang.Modules.BioMartR,
                    OrthoLang.Modules.Blast,
                    OrthoLang.Modules.BlastDB,
                    OrthoLang.Modules.BlastHits,
                    OrthoLang.Modules.BlastRBH,
                    OrthoLang.Modules.Busco,
                    OrthoLang.Modules.CRBBlast,
                    OrthoLang.Modules.Cheat,
                    OrthoLang.Modules.Diamond,
                    OrthoLang.Modules.GreenCut,
                    OrthoLang.Modules.Hmmer,
                    OrthoLang.Modules.ListLike,
                    OrthoLang.Modules.Curl,
                    OrthoLang.Modules.Load,
                    OrthoLang.Modules.MMSeqs,
                    OrthoLang.Modules.Math,
                    OrthoLang.Modules.Muscle,
                    OrthoLang.Modules.NewRulesTest,
                    OrthoLang.Modules.OrthoFinder,
                    OrthoLang.Modules.OrthoGroups,
                    OrthoLang.Modules.Permute,
                    OrthoLang.Modules.Plots,
                    OrthoLang.Modules.PsiBlast,
                    OrthoLang.Modules.Range,
                    OrthoLang.Modules.Repeat,
                    OrthoLang.Modules.Replace,
                    OrthoLang.Modules.Sample,
                    OrthoLang.Modules.Scores,
                    OrthoLang.Modules.SeqIO,
                    OrthoLang.Modules.Sets,
                    OrthoLang.Modules.SetsTable,
                    OrthoLang.Modules.Singletons,
                    OrthoLang.Modules.SonicParanoid,
                    OrthoLang.Modules.Summarize,
                    OrthoLang.Test,
                    OrthoLang.Test.Parse,
                    OrthoLang.Test.Parse.Arbitrary,
                    OrthoLang.Test.Parse.Examples,
                    OrthoLang.Test.Repl,
                    OrthoLang.Test.Scripts,
                    OrthoLang.Test.Versions

-- everything is built into one binary:
--   run tests with ortholang --test
--   write website reference docs with ortholang --reference
-- TODO is -IO -qg needed for ortholang, or just shake?
executable ortholang
  import:           shared-properties
  main-is:          OrthoLang.hs
  ghc-options: 
        -Wno-orphans
        -- -O2 is for building fast final code; switch to -O0 to speed compilation during development!
        -O2
        -- for threading and garbage collection rationale, see:
        -- http://hackage.haskell.org/package/shake-0.14/docs/Development-Shake.html
        -threaded
        -rtsopts
        "-with-rtsopts=-N8 -I0 -qg"
