cabal-version:      2.4
name:               OrthoLang
synopsis:           Short, reproducible phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.9.5
-- license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
data-files:         default.cfg,
                    examples/scripts/*.ol,
                    examples/gene-lists/*.txt,
                    examples/genome-lists/*.txt,
                    examples/sequences/*.fa,
                    examples/sequences/*.faa,
                    examples/sequences/*.fna,
                    examples/sequences/*.gbff,
                    examples/sequences/*.gbk,
                    docs/*.txt,
                    tests/check/*.sh,
                    tests/versions/*.txt,
                    tests/repl/*.txt,
                    tests/scripts/*.ol,
                    tests/stdout/*.txt,
                    tests/tmpfiles/*.txt,
                    tests/parse/*.txt,
                    tests/expand/*.txt,
                    tests/help/*.txt,
                    scripts/wrappers/*.sh

source-repository head
  type: git
  location: https://github.com/jefdaj/ortholang.git

common shared-properties
  hs-source-dirs:   .
  default-language: Haskell2010
  pkgconfig-depends: zlib
  build-depends:    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    deepseq,
                    docopt,
                    -- exceptions,
                    -- enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filelock,
                    filepath,
                    fgl,
                    graphviz,
                    haskeline,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    -- regex,
                    regex-compat,
                    regex-posix,
                    -- regex-pcre,
                    silently,
                    scientific,
                    shake >= 0.17.5,
                    split,
                    strict,
                    -- tagged-exception-core,
                    hspec,
                    pretty-simple,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unbounded-delays,
                    unordered-containers,
                    unix,
                    utility-ht,
                    time,
                    concurrent-extra,
                    retry,
                    terminal-size,
                    posix-escape,
                    random,
                    random-shuffle,
                    dlist,
                    ansi-terminal,
                    setlocale,
                    raw-strings-qq,
                    logging,
                    progress-meter,
                    store,
                    download

library
  import:           shared-properties
  exposed-modules:  Paths_OrthoLang,
                    OrthoLang.Interpreter,
                    OrthoLang.Interpreter.Config,
                    OrthoLang.Interpreter.Actions,
                    OrthoLang.Interpreter.Compile,
                    OrthoLang.Interpreter.Compile.Basic,
                    OrthoLang.Interpreter.Compile.Compose,
                    OrthoLang.Interpreter.Compile.Map,
                    OrthoLang.Interpreter.Compile.Map2,
                    OrthoLang.Interpreter.Compile.NewRules,
                    OrthoLang.Interpreter.Compile.Simple,
                    OrthoLang.Interpreter.Progress,
                    OrthoLang.Interpreter.Eval,
                    OrthoLang.Locks,
                    OrthoLang.Interpreter.Parse,
                    OrthoLang.Interpreter.Parse.Basic,
                    OrthoLang.Interpreter.Parse.Expr,
                    OrthoLang.Interpreter.Parse.Script,
                    OrthoLang.Interpreter.Parse.Util,
                    OrthoLang.Interpreter.Paths,
                    OrthoLang.Interpreter.Repl,
                    OrthoLang.Interpreter.Repl.Help,
                    OrthoLang.Interpreter.Repl.Info,
                    OrthoLang.Interpreter.Repl.Edit,
                    OrthoLang.Interpreter.Sanitize,
                    OrthoLang.Types,
                    OrthoLang.Script,
                    OrthoLang.Debug,
                    OrthoLang.Errors,
                    OrthoLang.Util,
                    OrthoLang.Modules,
                    OrthoLang.Modules.AllVsAll,
                    OrthoLang.Modules.BioMartR,
                    OrthoLang.Modules.Blast,
                    OrthoLang.Modules.BlastDB,
                    OrthoLang.Modules.BlastHits,
                    OrthoLang.Modules.BlastRBH,
                    OrthoLang.Modules.Busco,
                    OrthoLang.Modules.CRBBlast,
                    OrthoLang.Modules.Script,
                    OrthoLang.Modules.FlowChart,
                    OrthoLang.Modules.Diamond,
                    OrthoLang.Modules.GreenCut,
                    OrthoLang.Modules.Hmmer,
                    OrthoLang.Modules.ListLike,
                    OrthoLang.Modules.Curl,
                    OrthoLang.Modules.Load,
                    OrthoLang.Modules.MMSeqs,
                    OrthoLang.Modules.Math,
                    OrthoLang.Modules.Muscle,
                    OrthoLang.Modules.NewRulesTest,
                    OrthoLang.Modules.OrthoFinder,
                    OrthoLang.Modules.OrthoGroups,
                    OrthoLang.Modules.Permute,
                    OrthoLang.Modules.Plots,
                    OrthoLang.Modules.PsiBlast,
                    OrthoLang.Modules.Range,
                    OrthoLang.Modules.Repeat,
                    OrthoLang.Modules.Replace,
                    OrthoLang.Modules.Sample,
                    OrthoLang.Modules.Scores,
                    OrthoLang.Modules.SeqIO,
                    OrthoLang.Modules.Sets,
                    OrthoLang.Modules.SetsTable,
                    OrthoLang.Modules.Singletons,
                    OrthoLang.Modules.SonicParanoid,
                    OrthoLang.Modules.Summarize,
                    OrthoLang.Modules.Zip,
                    OrthoLang.Test,
                    OrthoLang.Test.Parse,
                    OrthoLang.Test.Parse.Arbitrary,
                    OrthoLang.Test.Parse.Examples,
                    OrthoLang.Test.Repl,
                    OrthoLang.Test.Help,
                    OrthoLang.Test.Scripts,
                    OrthoLang.Test.Versions

-- everything is built into one binary:
--   run tests with ortholang --test
--   write website reference docs with ortholang --reference
-- TODO is -IO -qg needed for ortholang, or just shake?
executable ortholang
  import:           shared-properties
  main-is:          OrthoLang.hs
  ghc-options: 
        -Wno-orphans
        -- -O2 is for building fast final code; switch to -O0 to speed compilation during development!
        -O2
        -- for threading and garbage collection rationale, see:
        -- http://hackage.haskell.org/package/shake-0.14/docs/Development-Shake.html
        -threaded
        -rtsopts
        "-with-rtsopts=-N8 -I0 -qg"
