name:               ShortCut
synopsis:           Rapid, robust, reproducible candidate gene searches
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.8.1.0
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
data-files:         data/*.fa,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbk,
                    data/*.txt,
                    tests/depend/*.txt,
                    tests/repl/*.txt,
                    tests/scripts/*.cut,
                    tests/stdout/*.out,
                    tests/tmpfiles/*.tree,
                    usage.txt,
                    wrappers/*.sh

-- everything is built into one binary:
--   run tests with shortcut --test
--   write reference.md with shortcut --reference
executable shortcut
  main-is:          ShortCut.hs
  ghc-options: 
        -threaded
        -rtsopts
        -Wall
        -- -Werror
        -Wno-orphans
        -O2
        "-with-rtsopts=-N -IO"
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_ShortCut,
                    ShortCut.Core,
                    ShortCut.Core.Actions,
                    ShortCut.Core.Compile,
                    ShortCut.Core.Compile.Basic,
                    ShortCut.Core.Compile.Compose,
                    ShortCut.Core.Compile.Map,
                    ShortCut.Core.Compile.Map2,
                    ShortCut.Core.Compile.Replace,
                    ShortCut.Core.Config,
                    ShortCut.Core.Eval,
                    ShortCut.Core.Locks,
                    ShortCut.Core.Parse,
                    ShortCut.Core.Parse.Basic,
                    ShortCut.Core.Parse.Expr,
                    ShortCut.Core.Parse.Script,
                    ShortCut.Core.Paths,
                    ShortCut.Core.Pretty,
                    ShortCut.Core.Repl,
                    ShortCut.Core.Sanitize,
                    ShortCut.Core.Types,
                    ShortCut.Core.Util,
                    ShortCut.Modules,
                    ShortCut.Modules.BioMartR,
                    ShortCut.Modules.Blast,
                    ShortCut.Modules.BlastDB,
                    ShortCut.Modules.BlastHits,
                    ShortCut.Modules.BlastRBH,
                    ShortCut.Modules.Cheat,
                    ShortCut.Modules.CRBBlast,
                    ShortCut.Modules.Diamond,
                    ShortCut.Modules.Hmmer,
                    ShortCut.Modules.Length,
                    ShortCut.Modules.Load,
                    ShortCut.Modules.MMSeqs,
                    ShortCut.Modules.Math,
                    ShortCut.Modules.Muscle,
                    ShortCut.Modules.OrthoFinder,
                    ShortCut.Modules.OrthoGroups,
                    ShortCut.Modules.Permute,
                    ShortCut.Modules.Plots,
                    ShortCut.Modules.PsiBlast,
                    ShortCut.Modules.Repeat,
                    ShortCut.Modules.Sample,
                    ShortCut.Modules.Scores,
                    ShortCut.Modules.SeqIO,
                    ShortCut.Modules.Sets,
                    ShortCut.Modules.SonicParanoid,
                    ShortCut.Modules.Summarize,
                    ShortCut.Reference,
                    ShortCut.Test,
                    ShortCut.Test.Deps
                    ShortCut.Test.Parse,
                    ShortCut.Test.Parse.Arbitrary,
                    ShortCut.Test.Parse.Examples,
                    ShortCut.Test.Repl,
                    ShortCut.Test.Scripts
  build-depends:    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    docopt,
                    -- exceptions,
                    -- enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filelock,
                    filepath,
                    haskeline,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    regex-compat,
                    silently,
                    scientific,
                    shake >= 0.17.5,
                    split,
                    strict,
                    -- tagged-exception-core,
                    hspec,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unbounded-delays,
                    unix,
                    utility-ht,
                    time,
                    concurrent-extra,
                    retry,
                    terminal-size,
                    posix-escape,
                    random,
                    random-shuffle,
                    dlist,
                    ansi-terminal
