name:               ShortCut
synopsis:           Short, reproducible phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.8.4.11
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
data-files:         data/*.fa,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbk,
                    data/*.txt,
                    docs/*.txt,
                    docs/modules/*.txt,
                    docs/types/*.txt,
                    docs/functions/*.txt,
                    tests/check/*.sh,
                    tests/versions/*.txt,
                    tests/repl/*.txt,
                    tests/scripts/*.cut,
                    tests/stdout/*.txt,
                    tests/tmpfiles/*.txt,
                    wrapper-scripts/*.sh

-- everything is built into one binary:
--   run tests with shortcut --test
--   write website reference docs with shortcut --reference
-- TODO is -IO -qg needed for shortcut, or just shake?
executable shortcut
  main-is:          ShortCut.hs
  ghc-options: 
        -threaded
        -rtsopts
        -- TODO why does -N slow it down so much sometimes? remove?
        -- TODO is there an optimal number/fraction of cores?
        -- TODO does playing with flags for shake + other packages help?
        -- TODO does -O2 help?
        "-with-rtsopts=-N -IO"
        -Wno-orphans
        -- -pedantic
        -- -O0
        -- -O2
        -- TODO what about the old shake -qg?
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_ShortCut,
                    ShortCut.Core,
                    ShortCut.Core.Actions,
                    ShortCut.Core.Compile,
                    ShortCut.Core.Compile.Basic,
                    ShortCut.Core.Compile.Compose,
                    ShortCut.Core.Compile.Map,
                    ShortCut.Core.Compile.Map2,
                    ShortCut.Core.Compile.Repeat,
                    ShortCut.Core.Compile.Replace,
                    ShortCut.Core.Config,
                    ShortCut.Core.Eval,
                    ShortCut.Core.Locks,
                    ShortCut.Core.Parse,
                    ShortCut.Core.Parse.Util,
                    ShortCut.Core.Parse.Basic,
                    ShortCut.Core.Parse.Expr,
                    ShortCut.Core.Parse.Script,
                    ShortCut.Core.Paths,
                    ShortCut.Core.Pretty,
                    ShortCut.Core.Repl,
                    ShortCut.Core.Sanitize,
                    ShortCut.Core.Types,
                    ShortCut.Core.Util,
                    ShortCut.Modules,
                    ShortCut.Modules.BioMartR,
                    ShortCut.Modules.Blast,
                    ShortCut.Modules.BlastDB,
                    ShortCut.Modules.BlastHits,
                    ShortCut.Modules.BlastRBH,
                    ShortCut.Modules.CRBBlast,
                    ShortCut.Modules.Cheat,
                    ShortCut.Modules.Diamond,
                    ShortCut.Modules.Hmmer,
                    ShortCut.Modules.ListLike,
                    ShortCut.Modules.Load,
                    ShortCut.Modules.MMSeqs,
                    ShortCut.Modules.Math,
                    ShortCut.Modules.Muscle,
                    ShortCut.Modules.OrthoFinder,
                    ShortCut.Modules.OrthoGroups,
                    ShortCut.Modules.Busco,
                    ShortCut.Modules.Permute,
                    ShortCut.Modules.Plots,
                    ShortCut.Modules.PsiBlast,
                    ShortCut.Modules.Sample,
                    ShortCut.Modules.Scores,
                    ShortCut.Modules.SeqIO,
                    ShortCut.Modules.Sets,
                    ShortCut.Modules.SonicParanoid,
                    ShortCut.Modules.Summarize,
                    ShortCut.Modules.Range,
                    ShortCut.Modules.SetsTable,
                    ShortCut.Modules.AllVsAll,
                    ShortCut.Modules.GreenCut,
                    ShortCut.Test,
                    ShortCut.Test.Versions
                    ShortCut.Test.Parse,
                    ShortCut.Test.Parse.Arbitrary,
                    ShortCut.Test.Parse.Examples,
                    ShortCut.Test.Repl,
                    ShortCut.Test.Scripts
  build-depends:    Glob,
                    MissingH,
                    QuickCheck,
                    ansi-terminal,
                    base,
                    bytestring,
                    concurrent-extra,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    dlist,
                    docopt,
                    filelock,
                    filepath,
                    haskeline,
                    hspec,
                    logging,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    posix-escape,
                    pretty,
                    process,
                    progress-meter,
                    random,
                    random-shuffle,
                    regex-compat,
                    regex-posix,
                    retry,
                    safe-exceptions,
                    scientific,
                    setlocale,
                    shake,
                    silently,
                    split,
                    strict,
                    tasty,
                    tasty-golden,
                    tasty-hspec,
                    tasty-hunit,
                    tasty-quickcheck,
                    temporary,
                    terminal-size,
                    text,
                    time,
                    transformers,
                    unbounded-delays,
                    unix,
                    utility-ht

executable docs

  -- it is buildable, but not needed unless you're updating the demo site.
  -- buildable:        False

  main-is:          Docs.hs
  default-language: Haskell2010
  hs-source-dirs:   .
  build-depends:    Glob,
                    MissingH,
                    ansi-terminal,
                    base,
                    bytestring,
                    concurrent-extra,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    dlist,
                    docopt,
                    filelock,
                    filepath,
                    haskeline,
                    logging,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    posix-escape,
                    pretty,
                    process,
                    random,
                    random-shuffle,
                    regex-compat,
                    regex-posix,
                    safe-exceptions,
                    scientific,
                    shake,
                    silently,
                    split,
                    strict,
                    tasty,
                    tasty-golden,
                    terminal-size,
                    text,
                    time,
                    transformers,
                    unix,
                    utility-ht
